# bookstore

./: db.sqlite3  pyproject.toml
bookstore/: settings.py
bookstore/bookstore/: settings.py
order/: admin.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
product/: admin.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: factories.py
